--- a/css/style.css
+++ b/css/style.css
@@ -612,3 +612,22 @@ a {
     border-radius: 0 0 24px 24px;
   }
 }
+
+.top-banner {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background: #fff;
+}
+
+.top-banner picture,
+.top-banner img {
+  display: block;
+  width: 100%;
+}
+
+.banner-image {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
