--- a/css/style.css
+++ b/css/style.css
@@ -140,32 +140,36 @@ a {
   background: rgba(255,0,0,0);
   cursor: pointer;
 
-  left: calc(1450 / 1920 * 100%);
-  top: calc(40 / 1080 * 100%);
-  width: calc((1800 - 1450) / 1920 * 100%);
+  left: calc(1200 / 1920 * 100%);
+  top: calc(2 / 1080 * 100%);
+  width: calc((1800 - 1500) / 1920 * 100%);
   height: calc((125 - 40) / 1080 * 100%);
 }
 
 
 @media (max-width: 1024px) {
   .banner-hotspot {
-    left: calc(750 / 1000 * 100%);
-    top: calc(60 / 1400 * 100%);
-    width: calc((965 - 750) / 1000 * 100%);
+    left: calc(750 /1050 * 100%);
+    top: calc(10 / 1400 * 100%);
+    width: calc((965 - 700) / 1000 * 100%);
     height: calc((150 - 60) / 1400 * 100%);
   }
 }
 
 @media (max-width: 600px) {
   .banner-hotspot {
-    left: calc(500 / 720 * 100%);
-    top: calc(55 / 1280 * 100%);
-    width: calc((700 - 500) / 720 * 100%);
-    height: calc((140 - 55) / 1280 * 100%);
+    left: 70.83%;
+    top: 0.15%;
+    width: 27.77%;
+    height: 6.64%;
+    aspect-ratio: 7290/1280;
+  }
+  .banner-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
-
-
 
 .hero-section {
   padding: 80px 0 72px;
